--- a/Spring-Boot-Concepts/src/main/resources/application.properties
+++ b/Spring-Boot-Concepts/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 
+server.port=8080
+
+spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
+spring.datasource.url= jdbc:mysql://localhost:3306/USER_APP
+spring.datasource.username=root
+spring.datasource.password=password
+
+spring.jpa.open-in-view=false
